# factorio-downloader

./: .gitignore  Dockerfile  Justfile  LICENSE  README.md  docker-start.sh  factorio.Dockerfile  main.py  pyproject.toml
src/factorio_downloader/: __main__.py  _urls.py  checksums.py  download.py  models.py
