[project]
name = "factorio-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "beautifulsoup4>=4.14.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.32.0",
    "mypy>=1.18.2",
    "ruff>=0.14.1",
    "types-requests>=2.32.4.20250913",
]
